--- a/src/styles.css
+++ b/src/styles.css
@@ -1,33 +1,44 @@
 body {
-  background-color: aqua;
+  background-color: azure;
 }
 .hidden {
   display: none;
 }
-.cats {
+.container {
   width: 100%;
-  padding: 40px;
+}
+.cats {
+  padding: 30px;
 }
 .cat-card {
-  width: 100%;
-  padding: 60px;
+  /* width: 100%; */
+  padding: 40px;
   display: flex;
   gap: 20px;
   margin: 0 auto;
 }
 .cat-img {
   width: 400px;
-  height: 300px;
+  /* height: 300px; */
   object-fit: cover;
 }
 .cat-info {
-  width: 800px;
+  width: 400px;
   display: flex;
   flex-direction: column;
 }
+.span-cat {
+  font-size: 20px;
+  text-decoration: underline;
+}
+.error {
+  color: red;
+  font-size: 32px;
+  text-align: center;
+}
 .loader {
-  margin: 0 auto;
-  color: #fff;
+  margin: 100 auto;
+  color: #0c2dc0;
   font-size: 10px;
   width: 1em;
   height: 1em;
